--- a/memoria/tex/capitulos/capitulo-6.tex
+++ b/memoria/tex/capitulos/capitulo-6.tex
@@ -23,7 +23,7 @@ A partir de estos cuatro vértices, en el canvas se visualizarán dos triángulo
 \begin{lstlisting}
 attribute vec2 a_Position;
 void main() {
-    gl_Position = vec4(a_Position.x, a_Position.y, 0.0, 1.0);
+  gl_Position = vec4(a_Position.x, a_Position.y, 0.0, 1.0);
 }
 \end{lstlisting}
 
@@ -96,7 +96,7 @@ Y por último, procedemos a buscar la forma de representar cualquier parte del p
     \end{split}
 \end{equation}
 
-En nuestro ejemplo concreto, usaremos un canvas de $720\times 720$ píxeles para representar inicialmente la región $[-2,2]\times[-2,2]$ del plano, y sobre esta aplicar zoom y desplazamientos. Aprovechando que la proporción es $1$, la transformación puede expresarse como $(x,y)\longmapsto(x_0,y_0)+\lambda\left(\frac{4}{720}(x,y) + (-2,-2)\right)$.
+En nuestro ejemplo concreto, usaremos un canvas de $1280\times 720$ píxeles, manteniendo así un ratio $r=1280/720=16/9$, que es uno de los más estándar. La región del plano a representar será inicialmente la $[-3.56,3.56]\times[-2,2]$, esto es, $h=4, w=r\cdot h =7.11$. Sobre esta región inicial aplicaremos zoom y desplazamientos.
 
 En muchos contextos, la transformación lineal (\ref{eq:transformacion-lineal-3}) se suele expresar en términos de una matriz $4\times 4$, identificando cada coordenada de dispositivo $(x,y)$ con un vector de 4 dimensiones $(x,y,0,1)^t$ y cada punto $p=(p_1,p_2)\in\R^2$ con el vector $(p_1, p_2, 0 ,1)^t$, de forma que:
 
@@ -128,8 +128,9 @@ uniform vec2 u_zoomCenter;
 // ... 
 
 vec2 get_world_coordinates() {
-    int nx = 720, ny = 720; // Canvas size (pixels)
-    float w = 4.0, h = 4.0; // Image size (units) 
+    int nx = 1280, ny = 720; // Canvas size (pixels)
+    float r = 16.0/9.0;      // Ratio width/height = 16/9
+    float w = 4.0, h = r * w;  // Image size (units) 
     // Coordenadas de dispositivo normalizadas en [0,1]x[0,1]
     vec2 uv = (gl_FragCoord.xy + vec2(0.5)) 
                 / vec2(float(nx), float(ny));
@@ -160,14 +161,14 @@ y esto es válido para cualquier $n\in\N$. Podemos utilizar iterativamente la ec
 \begin{lstlisting}
 // Potencias complejas
 vec2 complex_pow(vec2 z, int n) {
-    vec2 current_pow = vec2(1.0, 0.0);
-    for (int i = 1; i < 100; i++) {
-        vec2 z_ant = current_pow;
-        current_pow = vec2( z_ant.x*z.x - z_ant.y*z.y, 
-                            z_ant.x*z.y + z_ant.y*z.x);
-        if(i >= n) break;
-    }
-    return current_pow;
+  vec2 current_pow = vec2(1.0, 0.0);
+  for (int i = 1; i < 100; i++) {
+    vec2 z_ant = current_pow;
+    current_pow = vec2( z_ant.x*z.x - z_ant.y*z.y, 
+                        z_ant.x*z.y + z_ant.y*z.x);
+    if(i >= n) break;
+  }
+  return current_pow;
 }
 \end{lstlisting}
 
@@ -177,7 +178,7 @@ Una vez tenemos esta función, es muy sencillo programar la función $P_{c,m}$ a
 
 \begin{lstlisting}
 vec2 P(vec2 z, vec2 c, int n) {
-	return complex_pow(z,n) + c;
+  return complex_pow(z,n) + c;
 }
 \end{lstlisting}
 
@@ -229,11 +230,11 @@ Con esta decisión tomada, presentamos el código utilizado
 // correspondiente en el gradiente creado por los cuatro 
 // colores.
 vec3 palette(float t, vec3 c1, vec3 c2, vec3 c3, vec3 c4) {
-    float x = 1.0 / 3.0;
-    if (t < x) return mix(c1, c2, t/x);
-    else if (t < 2.0 * x) return mix(c2, c3, (t - x)/x);
-    else if (t < 3.0 * x) return mix(c3, c4, (t - 2.0*x)/x);
-    return c4;
+  float x = 1.0 / 3.0;
+  if (t < x) return mix(c1, c2, t/x);
+  else if (t < 2.0 * x) return mix(c2, c3, (t - x)/x);
+  else if (t < 3.0 * x) return mix(c3, c4, (t - 2.0*x)/x);
+  return c4;
 }
 
 // Asignacion de colores, a partir de una variable que define
@@ -257,31 +258,41 @@ Como se puede observar, es una simple interpolación lineal entre los 4 colores 
 \section{Visualizando conjuntos de Julia}
 \label{section:grafica-julia}
 
-Tenemos entonces todos los ingredientes para programar la visualización, tan solo falta decidir si el punto que representa el píxel es prisionero o escapa mediante la iteración de $P_{c,m}$. Tras obtener las coordenadas de mundo que se le asignan al píxel mediante el método descrito al inicio de esta sección, debemos iterar la función $P_{c,m}$ almacenando el número de iteraciones dadas. Atendiendo al teorema \ref{th:escape}, en caso de que el módulo supere el valor 2 se decide que el punto es de escape. Si esto nunca ocurre y se alcanza el número máximo de iteraciones sin que el módulo sea mayor que 2, entonces se decide que el punto es prisionero (recordemos el psudocódigo del algoritmo \ref{alg:Julia}). Atendiendo a esta decisión y al número de iteraciones dadas se asigna el color correspondiente como comentamos en la sección \ref{section:colores}. El código GLSL sería el siguiente:
+Tenemos entonces todos los ingredientes para programar la visualización, tan solo falta decidir si el punto que representa el píxel es prisionero o escapa mediante la iteración de $P_{c,m}$. Tras obtener las coordenadas de mundo que se le asignan al píxel mediante el método descrito al inicio de esta sección, debemos iterar la función $P_{c,m}$. Atendiendo al teorema \ref{th:escape}, en caso de que el módulo supere el valor 2 se decide que el punto es de escape. Si esto nunca ocurre y se alcanza el número máximo de iteraciones sin que el módulo sea mayor que 2, entonces se decide que el punto es prisionero (recordemos el psudocódigo del algoritmo \ref{alg:Julia}). Atendiendo a esta decisión y al número de iteraciones dadas se asigna el color correspondiente como comentamos en la sección \ref{section:colores}. El código GLSL sería el siguiente:
 
 \begin{lstlisting}
-// A partir del valor de la constante c y el exponente n
-// iteramos la funcion P_{c,m} y asignamos el color.
-vec4 Julia(vec2 c, int n) {
-    vec2 z0 = get_world_coordinates();
-    int iterations;
-    vec2 z = z0;
-    bool escaped = false;
-    float length_c = length(c);
-    for(int i = 0; i < 10000; i++) {
-        if(i > u_maxIterations) break;
-        iterations = i;
-        z = P(z, c, n);
-        if (length(z) > 2.0){
-            escaped = true;
-            break;
-        }
+// A partir del valor de la semilla z0, la constante c 
+// y el exponente n iteramos la funcion P_{c,m}.
+void iterateJulia(vec2 z0, vec2 c, int n, 
+  out bool escaped, out int iterations) {  
+  vec2 z = z0;
+  escaped = false;
+  for(int i = 0; i < 10000; i++) {
+    if(i == u_maxIterations) break;
+    iterations = i;
+    z = P(z, c, n);
+    if (length(z) > 2.0){
+      escaped = true;
+      break;
     }
-    return computePixelColor(escaped, iterations);
+  }
+}
+
+// A partir del valor de la constante c y el exponente n
+// se calcula el punto asociado al pixel, se itera P_{c,m}
+// y se devuelve el color en funcion de dicha iteracion.
+vec4 Julia(vec2 c, int n) {
+  vec2 z0 = get_world_coordinates();
+  bool escaped;
+  int iterations;
+  iterateJulia(z0, c, n, escaped, iterations);
+  return computePixelColor(escaped, iterations);
 }
 \end{lstlisting}
 
-Ya desde la función \verb|main|, llamamos a esta función recién presentada, le asignamos el color que devuelve a \verb|gl_FragColor| y obtenemos los resultados que se presentan en las imágenes \ref{fig:julia-webgl}.  
+Nótese el uso de los parámetros \verb|out|, que son variables las cuales mantienen el valor que se les haya asignado en la función después del retorno. En este caso, se itera $P_{c,m}$ y se asigna \verb|true| a la variable \verb|escaped| si y solo si la sucesión de iteradas diverge. En caso de que la sucesión diverja, la variable \verb|iterations| almacenaría el número de iteraciones calculadas hasta que el módulo de la iterada supere a $2$. 
+
+Por último, desde la función \verb|main|, llamamos a esta función recién presentada, le asignamos el color que devuelve a \verb|gl_FragColor| y obtenemos los resultados que se presentan en las imágenes \ref{fig:julia-webgl}.  
 
 \begin{lstlisting}
 gl_FragColor = Julia(u_juliaSetConstant, u_order);
@@ -304,25 +315,36 @@ Ya hemos visto la metodología a utilizar si queremos visualizar conjuntos de Ju
 La idea consiste por tanto en obtener las coordenadas de mundo del píxel, iterar la función $P_{c,m}$ tomando $z_0=0$ como semilla y observar qué sucede, recordemos el algoritmo \ref{alg:Mandelbrot}. Por la proposición \ref{prop:mandelbrot-escape} afirmamos que en el momento que una iterada supere en módulo a 2, entonces la sucesión de iteradas es divergente. Por tanto, almacenamos en una variable el número de iteradas que se han calculado antes de que el módulo de la sucesión supere a 2 en caso de que lo haga. Si esto no ocurre, se etiqueta al punto como prisionero y por tanto el punto pertenece a $\mathcal{M}_m$. De nuevo, la forma de asignar un color al píxel depende de si la sucesión diverge o no y del número de iteraciones hasta decidir que diverge en dicho caso. El código GLSL por tanto es el siguiente:
 
 \begin{lstlisting}
-vec4 Mandelbrot(int n) {
-    vec2 c = get_world_coordinates();
-    int iterations;
-    vec2 z = vec2(0.0);
-    bool escaped = false;
-    for (int i = 0; i < 10000; i++) {
-        if (i > u_maxIterations) break;
-        iterations = i;
-        z = P(z, c, n);
-        if (length(z) > 2.0) {
-        escaped = true;
-        break;
-        }
+// A partir de la constante c, el exponente n y 
+// tomando como semilla z=0 se itera P_{c,m} 
+void iterateMandelbrot(vec2 c, int n, 
+  out bool escaped, out int iterations) {
+    
+  vec2 z = vec2(0.0);
+  escaped = false;
+  for (int i = 0; i < 10000; i++) {
+    if (i == u_maxIterations) break;
+    iterations = i;
+    z = P(z, c, n);
+    if (length(z) > 2.0) {
+      escaped = true;
+      break;
     }
-    return computePixelColor(escaped, iterations);
+  }
+}
+
+// A partir del exponente n se calcula el punto asociado al
+// pixel, se itera y se devuelve el color asociado.
+vec4 Mandelbrot(int n) {
+  vec2 c = get_world_coordinates();
+  bool escaped;
+  int iterations;
+  iterateMandelbrot(c, n, escaped, iterations);
+  return computePixelColor(escaped, iterations);
 }
 \end{lstlisting}
 
-Vemos que es muy parecida a la función \verb|Julia| presentada en la sección \ref{section:grafica-julia}. La diferencia fundamental se encuentra en que mientras en los conjuntos de Julia fijamos un $c\in\C$ y usamos el complejo asociado al píxel como semilla en el caso del conjunto de Mandelbrot usamos siempre $z_0=0$ como semilla y tomamos como $c$ el complejo que representa el píxel.
+Vemos la analogía entre las funciones \verb|iterateJulia| y \verb|Julia| con las funciones \verb|iterateMandelbrot| y \verb|Mandelbrot|, estando las primeras presentadas en la sección \ref{section:grafica-julia}. La diferencia fundamental se encuentra en que mientras en los conjuntos de Julia fijamos un $c\in\C$ y usamos el complejo asociado al píxel como semilla en el caso del conjunto de Mandelbrot usamos siempre $z_0=0$ como semilla y tomamos como $c$ el complejo que representa el píxel.
 
 Por tanto, ya solo falta llamar a esta función desde \verb|main|, asignarle el valor que devuelve a \verb|gl_FragColor| y podremos ver el conjunto de Mandelbrot en detalle. Presentamos algunas imágenes de detalles del mismo, a la vez que animamos a revisitar las imágenes \ref{fig:mandelbrot-intro}, las cuales también se han obtenido mediante WebGL.
 
